@@ -178,7 +178,7 @@ namespace spot
 
     twa_graph_ptr res = make_twa_graph(aut->get_dict());
     res->copy_ap_of(aut);
-    res->prop_copy(aut, { true, true, false, true, false, true });
+    res->prop_copy(aut, { true, true, false, false, false, true });
     res->copy_acceptance_of(aut);
     if (simplify_guards)
       {
