@@ -1,6 +1,6 @@
 #! /bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2015, 2016 Laboratoire de Recherche et Développement de
+# Copyright (C) 2015, 2016, 2018 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -173,3 +173,9 @@ test "5,22,10" = `ltl2tgba -B -f 'F(Ga | (GFb <-> GFc))' |
 ltl2tgba -B -f 'F(Ga | (GFb <-> GFc))' |
   autfilt --small --exclusive-ap=a,b,c --simplify-ex --ap=3 > out
 test "5,21,10" = `autfilt out --stats='%s,%t,%e' --ap=2`
+
+
+# Issue #363.
+ltl2tgba 'a U b' |
+  autfilt --exclusive-ap=a,b,c --simplify-exclusive-ap > out
+test "2,8,3" = `autfilt out --stats='%s,%t,%e' --ap=2`
